--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "emotion-theming": "^11.0.0",
     "firebase": "^8.7.1",
+    "framer-motion": "^4.1.17",
+
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
