--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.6",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "date-fns": "^2.23.0",
     "emotion-theming": "^11.0.0",
     "firebase": "^8.7.1",
+    "firebase-admin": "^9.11.0",
     "framer-motion": "^4.1.17",
     "next": "10.x",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-hook-form": "^7.12.2",
+    "swr": "^0.5.6"
   }
 }
