--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^8.7.1",
     "firebase-admin": "^9.11.0",
     "framer-motion": "^4.1.17",
+    "js-cookie": "^3.0.1",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
