--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.1",
     "next": "10.x",
+    "next-seo": "^4.26.0",
     "react": "17.x",
     "react-dom": "17.x",
     "react-hook-form": "^7.12.2",
