--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,21 @@ version: 2.1
 jobs: 
   lint:
     docker:
-      -image: circleci/node:lts
+      - image: circleci/node:lts
     steps:
-      -checkout
-      -run:
-        name: Install dependencies
-        command: yarn install
-      -run:
-        name: Lint checks
-        command: yarn lint
-
+      - checkout
+      - run: 
+         name: Nodejs version
+         command: node --version
+      - run:
+         name: Install dependencies
+         command: yarn install
+      - run:
+         name: Lint checks
+         command: yarn lint
 
 workflows:
+ version: 2
+ test:
     jobs:
-      lint
+      - lint
