--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs: 
   lint:
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:14.10.1
     steps:
       - checkout
       - run: 
@@ -14,7 +14,7 @@ jobs:
          command: yarn install
       - run:
          name: Lint checks
-         command: yarn lint
+         command: yarn run lint
 
 workflows:
  version: 2
