--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,25 @@ version: 2.1
 jobs: 
   lint:
     docker:
-      - image: cimg/node:14.10.1
+      - image: circleci/node:14.15.5
     steps:
       - checkout
       - run: 
          name: Nodejs version
          command: node --version
       - run:
-         name: Install dep 
+         name: Installing dependencies
          command: yarn install
+      - run: 
+         name: Build docker image
+         command: docker build -t jurlem/fastfeedback:latest
+      - run:
+         name: Push docker image
+         command: docker push jurlem/fastfeedback:latest
+              echo "Pushed production image to docker hub"
+           
+         
+
 
 workflows:
  version: 2
