--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "firebase": "^8.7.1",
     "firebase-admin": "^9.11.0",
     "framer-motion": "^4.1.17",
+    "iframe-resizer": "^4.3.2",
     "js-cookie": "^3.0.1",
     "next": "10.x",
     "next-seo": "^4.26.0",
+    "pino": "^7.0.2",
     "react": "17.x",
     "react-dom": "17.x",
     "react-hook-form": "^7.12.2",
+    "react-markdown": "^7.0.1",
     "swr": "^0.5.6"
   }
 }
